# AROS-AArch64

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING-STARTED.md  GRAFT.md  HANDOFF.md  HARDWARE.md  Makefile  NOTES.md  PHASE1.md  PHASE2.md  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TODO.md
.github/workflows/: ci.yml
boot/: exc.c  fb.c  irq.c  kern.h  kmain.c  linker.ld  mmu.c  pmm.c  sched.c  shell.c  start.S  switch.S  task.c  uart.c  vectors.S
docs/features/: CLEANROOM.md  README.md  darwin-aarch64-port-inventory.md  darwin-aarch64-todo.md  host-wake-pattern.md
graft/: CONTINUATION.md  HANDOFF.md  HANDOVER-2026-07-17.md  README.md  STABILIZATION.md  UPSTREAM-NOTES.md  WORKFLOW.md  aros-ctl  aros-host-conf.sh  aros-host-release.entitlements.plist  aros-host.entitlements.plist  audio-smoke  bench-run  bootrun.sh  bsdsock-livetest.sh  build-darwin-aarch64.sh  clipboard-smoke  cocoa-display-handoff.md  configure-darwin-aarch64.diff  cpu_aarch64.h  cpucontext-aarch64.h  crash-smoke  demo-showcase.sh  dep-scan  deploy-check  desktop-smoke  desktop-visual  ffmpeg-smoke  hostvol-smoke  loadmatrix-smoke  make-aros-app.sh  make-aros-release.sh  rebuild-aros.sh  resize-smoke  run-shell.sh  run-window.sh  rust-smoke  startup-loop
graft/reports/: resize-freeze-report.md
harness/: lldb-dump.sh  qmp.py  run-hosted.sh  run.sh  test-hosted.sh  test.sh
hosted/: README.md  abishim.S  abishim.c  device.c  display.c  exec.c  execboot.c  host.c  kern.c  library.c  mem.c  msgport.c  preempt.c  signal.c  switch.S
hosted/bsdsocket/: bsdsock.exports  bsdsock_abi_test.c  bsdsock_host.h  bsdsock_pump.c  bsdsock_resolve.c  bsdsock_shim.c  bsdsock_shim.h  bsdsock_test.c  errno_test.c  errno_xlate.c  errno_xlate.h
hosted/clipboard/: abi_test.c  c_test.m  pasteboard.exports  pasteboard.h  pasteboard.m
hosted/clocktest/: ClockTest  build.sh  clocktest.c
hosted/cocoametal/: Macaros.icns  abi_test.c  cmshader.air  cmshader.metal  cmshader.metallib  cmshader_metallib.h  cocoametal.exports  cocoametal.h  cocoametal.m  cocoametal_control.m  cocoametal_gpu.m  cocoametal_settings.m  cocoametal_settings_schema.m  cocoametal_shell.m  cocoametal_statusbar.m  cocoametal_window.m  d1_test.m  d2t_test.m  fullscreen_test.m  gpu_test.c  hiddsim_test.c  input_test.m  livedraw_test.m  macaron_icon.h  make-macaron-icon.sh  settings.json  settings_test.m  shell_test.m  show.m  statusbar_test.m
hosted/coreaudio/: a_test.c  coreaudio.exports  coreaudio_shim.c  coreaudio_shim.h
hosted/exwalk/: .gitignore  build.sh  exwalk.c
hosted/feraille/: build.sh  gpui-platform-contract.md  probe_main.c
hosted/feraille/core-probe/: Cargo.toml
hosted/feraille/core-probe/.cargo/: config.toml
hosted/feraille/core-probe/src/: getrandom_aros.rs  lib.rs
hosted/ffmpeg/: README.md  aros-cc.sh  aros-compat.h  aros_avio.c  aros_avio.h  build-datatype.sh  build-ff1.sh  build-ffprobe.sh  build-full.sh  build-video.sh  build-videox.sh  build.sh  deploy.sh  ff0_main.c  ff1_decode.c  ff2_show.c  ff3_avio.c  ffprobe_stubs.c  ffthumb.c  ffview.c  gen-testmedia.sh
hosted/gpufx/: .gitignore  build.sh  gpufxtest.c
hosted/gpufx-bench/: Cargo.toml  README.md  build.sh
hosted/gpufx-bench/c/: bench_main.c
hosted/gpufx-bench/src/: lib.rs
hosted/hostbind/: README.md  build.sh  hostbind_sample.c
hosted/hostcpu/: build.sh  cp_abi_test.c  cp_test.c  hostcpu.exports  hostcpu_shim.c  hostcpu_shim.h
hosted/hostshell/: README.md  build.sh  cmsettings.h  cmsettings.m  cmsettings_test.m  cmshell.h  cmshell.m  shell_test.m
hosted/hostvolume/: hostvolume.h  hv_charset.c  hv_meta.c  hv_norm.c  v_test.c
hosted/jit68k/: emu68_darwinize.pl  j1_test.c  j2_build.c  j2_interp.c  j2_jit68k.h  j2_test.c  j3_jit68k.h  j3_marshal.c  j3_test.c  j3_vector.c  j4_build.c  j4_hunk.h  j4_loader.c  j4_test.c  j5a_build.c  j5a_interp.c  j5a_jit68k.h  j5a_test.c  j5b_build.c  j5b_interp.c  j5b_jit68k.h  j5b_test.c  j5c_build.c  j5c_interp.c  j5c_jit68k.h  j5c_ra.c  j5c_shims.c  j5c_test.c  j5d_ea_helpers.c  j5d_engine.c  j5d_interp.c  j5d_jit68k.h  j5d_test.c  j5e_test.c  j5f_test.c  j5g_shims.c  j5g_test.c  j5h_test.c  j5i_test.c  j5j_test.c  (+21 more)
hosted/jit68k/rust68k/: .gitignore  Cargo.toml  README.md  UPSTREAM-LLVM-CCR-BUG.md  entry_allocprobe.s  entry_fib.s  entry_hello.s  entry_vecsum.s  entry_vecsum_inclusive.s
hosted/jit68k/rust68k/casprobe/: Cargo.toml  entry.s
hosted/jit68k/rust68k/casprobe/src/: lib.rs
hosted/jit68k/rust68k/fibcore/: Cargo.toml
hosted/jit68k/rust68k/fibcore/src/: lib.rs
hosted/jit68k/rust68k/hello/: Cargo.toml
hosted/jit68k/rust68k/hello/src/: lib.rs
hosted/jit68k/rust68k/libc68k/: libc68k.c  lvo.s  test_libc.c
hosted/jit68k/rust68k/memprobe/: Cargo.toml  entry.s
hosted/jit68k/rust68k/memprobe/src/: lib.rs
hosted/jit68k/rust68k/src/: lib.rs
hosted/jit68k/rust68k/std68k-probe/: .gitignore  Cargo.toml  link68k.ld  merge.ld  std68k.exe.demo
hosted/jit68k/rust68k/std68k-probe/src/: lib.rs
hosted/jit68k/rust68k/tools/: build-patched-rustc.sh  build-rust68k.sh  elfexec2hunk.py  link-std68k.sh  m68k-ccr-minimal.patch
hosted/libaros/: IDEAS.md  libaros.h
hosted/printing/: build.sh  pdfgen.c  pdfgen.exports  pdfgen.h  pr_test.c
hosted/rust/: BUILDING-PROGRAMS.md  FIX-PLAN.md  HANDOFF-std68k.md  README.md  STD-PORT.md  STD68K-PLAN.md  aarch64-unknown-aros.json  aros-build.sh  aros_env_glue.c  aros_fs_glue.c  aros_moonstone_gfx.c  aros_net_glue.c  aros_process_glue.c  aros_rt_glue.c  aros_sync_glue.c  aros_thread_glue.c  build.sh  hello_main.c  m68k-unknown-aros.json  moonstone-build.sh  net-build.sh  rs0_main.c  rs3_main.c  rs_moonstone_main.c  rs_net_main.c  rs_stdnet_main.c  rust-toolchain.toml  sample-build.sh  std-build.sh  stdnet-build.sh
hosted/rust/aros-rt/: Cargo.toml
hosted/rust/aros-rt/src/: lib.rs
hosted/rust/moonstone-probe/: Cargo.toml
hosted/rust/moonstone-probe/src/: lib.rs
hosted/rust/sample/: Cargo.toml  RELEASE-NOTE.md
hosted/rust/sample/src/: lib.rs
hosted/timertest/: TimerTest  build.sh  timertest.c
hosted/x18probe/: README.md  build.sh  x18probe.c
(+128 files in other folders)
