[package]
name = "hello68k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# Isolated crate like fibcore/: keeps this program's codegen independent of the
# corpus crate while the upstream CCR bug (../UPSTREAM-LLVM-CCR-BUG.md) is open.
[profile.release]
panic = "abort"
opt-level = 1
debug = false
